--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -17,6 +17,8 @@
     "@types/react-helmet": "^6.1.1",
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
+    "api": "^0.0.0",
+    "components": "^0.0.0",
     "connected-react-router": "^6.9.1",
     "history": "4.10.1",
     "react": "^17.0.2",
